tests/ui/views/window_oversize.rx
//@ spec: RXS-0078
kernel fn k(v: ViewMut<global, f32>) {
    let (lo, hi) = v.split_at(4);
    let w = lo.windows(8); //~ ERROR RX3008
}

fn main() {}
